--- a/40-25.html
+++ b/40-25.html
@@ -15,7 +15,8 @@
     </style>
 </head>
 <body>
-    <div class="box"></div>
+    <div class="box">you can drag this box</div>
+    <h1>조형민</h1>
     <script>
         //드래그 대상 요소
         const $box = document.querySelector('.box');
