--- a/40-31.html
+++ b/40-31.html
@@ -38,16 +38,23 @@
         //사용자 클릭에 의해 선택된 내비게이션 아이템(li 요소)에 active 클래스를 추가하고
         //그 외에 모든 내비게이션 아이템의 active 클래스를 제거한다.
         function activate({target}) {
+            //이벤트를 발생시킨 요소(target)가 ul#fruits의 자식 요소가 아니라면 무시한다.
+            if(!target.matches('#fruits > li')) return;
+
+
             [...$fruits.children].forEach($fruit => {
                 $fruit.classList.toggle('active', $fruit === target);
                 $msg.textContent = target.id;
             });
         }
 
+        /*
         //모든 내비게이션 아이템(li 요소)에 이벤트 핸들러를 등록한다.
         document.getElementById('apple').onclick = activate;
         document.getElementById('banana').onclick = activate;
         document.getElementById('orange').onclick = activate;
+        */
+        $fruits.onclick = activate;
     </script>
 </body>
 </html>
